deployment/weatherapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "weather-app"
spec:
  ingressClassName: nginx
  rules:
    - host: weather-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weather-app-lb
                port:
                  number: 8001
